<resources>
    <string name="app_name">GGToolbarNomPrenom</string>
    <string name="txtMenuEtToolbar">Menu et Toolbar</string>
    <string name="menu_toolbar_settings">Paramètre</string>
    <string name="menu_toolbar_profile">Profil</string>
    <string name="menu_toolbar_share">Partager</string>
    <string name="menu_toolbar_add">Ajouter</string>
    <string name="menu_toolbar_help">Aide</string>
    <string name="cliquezIcone">Cliquez sur les iôcnes ou textes de la barre d\'outils pour tester les différentes options</string>
    <string name="appuyez">appuyez assez longuement ici pour faire apparaître le menu contextuel.</string>
    <string name="menu_selectionne">Item de menu %s sélectionné</string>
    <string name="option1">option 1</string>
    <string name="option1_1">option1.1</string>
    <string name="option1_2">option1.2</string>
    <string name="menu_contextuel_option1">Option 1</string>
    <string name="menu_contextuel_option2">Option 2</string>
    <string name="menu_contextuel_option3">Option 3</string>
    <string name="menu_contextuel_option4">Option 4</string>
    <string name="menu_contextuel_option5">Option 5</string>
    <string name="retour">RETOUR</string>
    <string name="deuxiemeActivite">Vous êtes à la deuxième activité. Cliquez sur le bouton Retour pour aller à l\'activité parente.</string>
    <string name="Call">Call</string>
    <string name="Email">Email</string>
    <string name="Toast">Toast</string>
</resources>