<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_toolbar_site"
        android:icon="@drawable/ic_baseline_web_24"
        android:title="@string/Email"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_toolbar_toast"
        android:icon="@drawable/ic_baseline_adb_24"
        android:title="@string/Toast"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_toolbar_email"
        android:icon="@drawable/ic_baseline_email_24"
        android:title="@string/Email"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_toolbar_call"
        android:icon="@drawable/ic_baseline_call_24"
        android:title="@string/Call"
        app:showAsAction="always|collapseActionView" />
</menu>